syntax = "proto3";

package mirero.daq.domain.inference.protos.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "daq_common.proto";

option csharp_namespace = "Mirero.DAQ.Domain.Inference.Protos.V1";

service WorkerService {
	// Worker
	rpc ListWorkers(ListWorkersRequest) returns (ListWorkersResponse) {}
	rpc CreateWorker(CreateWorkerRequest) returns (google.protobuf.Empty) {}
	rpc StartWorker(StartWorkerRequest) returns (google.protobuf.Empty) {}
	rpc StopWorker(StopWorkerRequest) returns (google.protobuf.Empty) {}
	rpc RemoveWorker(RemoveWorkerRequest) returns (google.protobuf.Empty) {}
}

// Worker
message Worker {
	string id = 1;
	string server_id = 2;
	int32 cpu_count = 3;
	int64 cpu_memory = 4;
	int32 gpu_count = 5;
	int64 gpu_memory = 6;
	google.protobuf.StringValue properties = 7;
	google.protobuf.StringValue description = 8;
	google.protobuf.StringValue serving_type = 9;
}

message ListWorkersRequest {
	mirero.daq.domain.common.protos.QueryParameter query_parameter = 1;
}

message ListWorkersResponse {
	mirero.daq.domain.common.protos.PageResult page_result = 1;
	repeated Worker workers = 2;
}

message CreateWorkerRequest {
	string id = 1;
	string server_id = 2;
	int32 cpu_count = 3;
	int64 cpu_memory = 4;
	int32 gpu_count = 5;
	int64 gpu_memory = 6;
	google.protobuf.StringValue properties = 7;
	google.protobuf.StringValue description = 8;
	google.protobuf.StringValue serving_type = 9;
}

message StartWorkerRequest {
	string worker_id = 1;
}

message StopWorkerRequest {
	string worker_id = 1;
}

message RemoveWorkerRequest {
	string worker_id = 1;
}